--- a/a.html
+++ b/a.html
@@ -5,8 +5,6 @@
     <title></title>
 </head>
 <body>
-	<h1>这里是index</h1>
-	<a href="a.html">这里是a</a>
-	<a href="b.html">这里是b</a>
+	<h1>这里是a</h1>
 </body>
 </html>
