--- a/企业站/index.html
+++ b/企业站/index.html
@@ -212,7 +212,7 @@
             <div class="row">
                 <hr style="text-align: center;border: white solid thin;width: 20%">
                 <div class="col-12 text-center text-white">
-                    版权所有 &copy; 王鹏辉
+                    版权所有 &copy; 王鹏辉 <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1279084222&web_id=1279084222"></script>
                 </div>
             </div>
         </footer>
