--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>这里是index</h1>
-	<a href="a.html">这里是a</a>
-	<a href="b.html">这里是b</a>
+	<a href="a.html">这里是1</a>
+	<a href="b.html">这里是2</a>
 </body>
 </html>
