--- a/作业3_div/div.html
+++ b/作业3_div/div.html
@@ -17,11 +17,11 @@
         }
         #div_bottom{
             text-align: center;
-            background-color: salmon;
+            background-color: yellowgreen;
         }
         #div_top{
             text-align: center;
-            background-color: salmon;
+            background-color: yellowgreen;
         }
         body{
             background-color: white;
@@ -41,7 +41,7 @@
         }
         .font{
             font-family: "黑体";
-            color: black;
+            color: white;
             font-size: 25px;
             vertical-align:middle; 
 
@@ -59,7 +59,7 @@
             box-sizing: border-box;
         }
         #left ul>li a:hover{
-            background-color: salmon;
+            background-color: yellowgreen;
         }
         #left ul>li {
             border-bottom: 1px solid black;
@@ -77,8 +77,8 @@
 </head>
 <body>
     <div id="div_top">
-        <img src="img/shequ.png" alt="" id="weixiao">
-        <span class="font">喝杯咖啡吗？</span>
+        <img src="img/nan.png" alt="" id="weixiao" style="width: 34px;">
+        <span class="font">来杯咖啡吗？</span>
     </div>
     <div>
         <div id="left" >
@@ -99,19 +99,19 @@
                 </tr>
                 <tr>
                     <th>拿铁</th>
-                    <th><span class="price">20</span></th>
+                    <th><span class="price">40</span></th>
                 </tr>
                 <tr>
                     <th>卡布奇诺</th>
-                    <th><span class="price">22</span></th>
+                    <th><span class="price">32</span></th>
                 </tr>
                 <tr>
                     <th>奥瑞白</th>
-                    <th><span class="price">30</span></th>
+                    <th><span class="price">60</span></th>
                 </tr>
                 <tr>
                     <th>美式</th>
-                    <th><span class="price">50</span></th>
+                    <th><span class="price">23</span></th>
                 </tr>
                 <tr>
                     <th>焦糖玛奇朵</th>
@@ -121,18 +121,19 @@
             <h2 id="natie">拿铁</h2>
             <p style="text-indent: 2em;">    其实，拿铁（Latte）在意大利语里是“牛奶”的意思，如果你点一杯“拿铁”，那么服务生只会给你上一杯牛奶。而意大利语的Caffè Latte指的才是拿铁。现在很多冷饮店都会推出自己的“拿铁”系列，像“红茶拿铁”“抹茶拿铁”等等，其实就是奶茶而并没有咖啡的成分。</p>
             <h2 id="kabuqinuo">卡布奇诺</h2>
-            <p style="text-indent: 2em;">    其实，拿铁（Latte）在意大利语里是“牛奶”的意思，如果你点一杯“拿铁”，那么服务生只会给你上一杯牛奶。而意大利语的Caffè Latte指的才是拿铁。现在很多冷饮店都会推出自己的“拿铁”系列，像“红茶拿铁”“抹茶拿铁”等等，其实就是奶茶而并没有咖啡的成分。</p> 
+            <p style="text-indent: 2em;">    卡布奇诺是一种加入以同量的意大利特浓咖啡和蒸汽泡沫牛奶相混合的意大利咖啡。此时咖啡的颜色，就像卡布奇诺教会的修士在深褐色的外衣上覆上一条头巾一样，咖啡因此得名。传统的卡布奇诺咖啡是三分之一浓缩咖啡，三分之一蒸汽牛奶和三分之一泡沫牛奶，并在上面撒上小颗粒的肉桂粉末。</p> 
             <h2 id="aoruibai">奥瑞白</h2>
-            <p style="text-indent: 2em;">    其实，拿铁（Latte）在意大利语里是“牛奶”的意思，如果你点一杯“拿铁”，那么服务生只会给你上一杯牛奶。而意大利语的Caffè Latte指的才是拿铁。现在很多冷饮店都会推出自己的“拿铁”系列，像“红茶拿铁”“抹茶拿铁”等等，其实就是奶茶而并没有咖啡的成分。</p>
+            <p style="text-indent: 2em;">    奥瑞白咖啡是有浓缩咖啡、蒸牛奶和少量的奶沫制作而成，它的奶沫是区别奥瑞白咖啡的重要特点。像卡布奇诺用的是空气混入较多的粗奶泡相比较的话，奥瑞白咖啡则是表层覆盖的，则是薄薄一层的细密奶泡。奥瑞白咖啡通常是一份意式浓缩加上牛奶奶泡，一杯约莫150ml-180ml。</p>
             <h2 id="meishikafei">美式咖啡</h2>
-            <p style="text-indent: 2em;">    其实，拿铁（Latte）在意大利语里是“牛奶”的意思，如果你点一杯“拿铁”，那么服务生只会给你上一杯牛奶。而意大利语的Caffè Latte指的才是拿铁。现在很多冷饮店都会推出自己的“拿铁”系列，像“红茶拿铁”“抹茶拿铁”等等，其实就是奶茶而并没有咖啡的成分。</p>
+            <p style="text-indent: 2em;">    “美式咖啡”（英文：Americano，意大利语：Caffè Americano）咖啡的一种，是最普通的咖啡。是使用滴滤式咖啡壶所制作出的黑咖啡，又或者是意式浓缩中加入大量的水制成。
+                美式咖啡口味比较淡。因为一般的萃取时间相对较长（大概四五分钟），所以咖啡因含量较高。</p>
             <h2 id="jiaotang">焦糖玛奇朵</h2>
-            <p style="text-indent: 2em;">    其实，拿铁（Latte）在意大利语里是“牛奶”的意思，如果你点一杯“拿铁”，那么服务生只会给你上一杯牛奶。而意大利语的Caffè Latte指的才是拿铁。现在很多冷饮店都会推出自己的“拿铁”系列，像“红茶拿铁”“抹茶拿铁”等等，其实就是奶茶而并没有咖啡的成分。</p>
+            <p style="text-indent: 2em;">    焦糖玛奇朵（英文：Caramel Macchiato）是在香浓热牛奶上加入浓缩咖啡、香草，再淋上纯正焦糖而制成的饮品，融合三种不同口味。Macchiato意大利文，意思是“烙印”和“印染”，中文音译“玛奇朵”。“Caramel”意思是焦糖。焦糖玛琪朵，寓意“甜蜜的印记”。</p>
                  
         </div>
     </div>
     <div id="div_bottom">
-        <span >版权所有@<a href="#wangpenghui">王鹏辉</a></span> 
+        <span style="color: white;">版权所有@<a href="#">宋维</a></span> 
     </div>
 </body>
 </html>
