--- a/danmu/danmu.html
+++ b/danmu/danmu.html
@@ -26,15 +26,19 @@
     <title>Document</title>
 </head>
 <body>
-    <body>
-        <div class="container">
+    
+    <div class="container">
      
+    </div>
+    <div class="menu-bar">
+        <input type="text" placeholder="说点什么吧~" id="bullet-text"/>
+        <span class="btn send">发送弹幕</span>
+        <span class="btn close">清空弹幕</span>
+    </div>
+    <footer>
+        <div>
+            <span>版权所有@<a href="#">宋维</a></span>
         </div>
-        <div class="menu-bar">
-            <input type="text" placeholder="弹幕内容" id="bullet-text"/>
-            <span class="btn send">发送弹幕</span>
-            <span class="btn close">清空弹幕</span>
-        </div>
-    </body>
+    </footer>
 </body>
 </html>
